k8s/manifests/it-tools/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ittools.greedo.net`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls: {}
